# Codes

./: .gitignore  readme.md
001_warpAffineUsingOpencv/: CMakeLists.txt  build.sh  main.cpp  readme.md  run.sh
002_doxygen_demo/: classA.h  (+6 more)
003_glog_demo/: CMakeLists.txt  main.cpp  readme.md
004_background_subtraction/: CMakeLists.txt  Readme.md  main.cpp  runDemo1.sh  runDemo3.sh
004_background_subtraction/bakup/: GMM.cpp  GMM2.cpp  MotionDetector.h  readme.md
004_background_subtraction/include/: DataReader.h  MotionDetector.h  MotionDetector_DiffBase.h  MotionDetector_GMM2.h  MotionDetector_backsub.h  MotionDetector_base.h  MotionDetector_framesub.h  common.h  main.h
004_background_subtraction/src/: DataReader.cpp  MotionDetector.cpp  MotionDetector_3feamesub.cpp  MotionDetector_DiffBase.cpp  MotionDetector_GMM.cpp  MotionDetector_GMM2.cpp  MotionDetector_backsub.cpp  MotionDetector_base.cpp  MotionDetector_framesub.cpp  main.cpp
005_erode_and_dilate/: CMakeLists.txt  main.cpp  readme.md  runTest.sh
007_img_pyramid/: CMakeLists.txt  ReadMe.md  main.cpp  run.sh
008_Gauss_Filter_on_Imgae/: CMakeLists.txt  ReadMe.md  main.cpp  ref.cpp  run.sh
009_Pangolin_study/: CMakeLists.txt  ReadMe.md  run.sh
009_Pangolin_study/src/: 00_project_test.cpp  01_HelloPangolin.cpp  02_HelloPangolinOffscreen.cpp  03_HelloPangolinThreads.cpp  04_SharedMemoryCamera.cpp  05_SimpleDisplay.cpp  06_SimpleDisplayImage.cpp  07_SimpleMultiDisplay.cpp
009_Pangolin_study/test/: test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
011_irrlicht_test/: CMakeLists.txt  ReadMe.md  rebuild.sh
011_irrlicht_test/src/: main_withoutROS.cpp
012_irrlicht_test/: CMakeLists.txt  ReadMe.md  package.xml  run.sh
012_irrlicht_test/cmake_moudles/: FindIrrlicht.cmake
012_irrlicht_test/include/: drawer.hpp
012_irrlicht_test/src/: main_withROS.cpp
013_YAML_Opreation/: CMakeLists.txt  ReadMe.md  run.sh
013_YAML_Opreation/config/: Test.yaml
013_YAML_Opreation/src/: main.cpp
014_Template_CLass_cpp/: CMakeLists.txt  ReadMe.md
014_Template_CLass_cpp/include/: Tclass.hpp  VClassSphere.hpp  VclassBase.hpp
014_Template_CLass_cpp/src/: Tclass.cpp  VClassSphere.cpp  VClassVolumeBase.cpp  main.cpp
015_K-means_Clustering/: CMakeLists.txt  ReadMe.md  run.sh
015_K-means_Clustering/data/: my.txt
015_K-means_Clustering/include/: K_means.hpp  Samples.hpp  type_sample.hpp
015_K-means_Clustering/src/: main.cpp
015_K-means_Clustering/tools/: createSamples.cpp  seeSamples.cpp
016_Full_K-means_Clustering/: CMakeLists.txt  ReadMe.md  createSamples.sh  rebuild.sh
016_Full_K-means_Clustering/cmake_moudles/: FindEigen.cmake
016_Full_K-means_Clustering/data/: k_mean.txt  my2.txt  test.txt  test_20190326.txt
016_Full_K-means_Clustering/include/Cluster/: K-means_rgbd_uv_pic.hpp  K_means_2D_point.hpp  K_means_base.hpp  K_means_rgb_pic.hpp  K_means_rgb_uv_pic.hpp
016_Full_K-means_Clustering/include/tools/: SampleSets_2D_point.hpp  drawData.hpp
016_Full_K-means_Clustering/include/types/: type_2D_point.hpp  type_rgb_pixel.hpp  type_rgbd_pixel.hpp
016_Full_K-means_Clustering/src/demos/: demo_K_mean_RGBD_uv_pic.cpp  demo_k_mean_2D_points.cpp  demo_k_mean_RGB_pic.cpp  demo_k_mean_RGB_uv_pic.cpp
016_Full_K-means_Clustering/src/tools/: create2DSamples.cpp  see2DSamples.cpp
018_SSE_AVX_Accelerate/: CMakeLists.txt  ReadMe.md  time.txt  time_without_v.txt
018_SSE_AVX_Accelerate/src/: SSE_Demo.cc
018_SSE_AVX_Accelerate/tools/: generateData.cc
019_Feature_Pyramid_Scale/: CMakeLists.txt  ReadMe.md
019_Feature_Pyramid_Scale/src/: main.cc
021_VTK_Test/: CMakeLists.txt  ReadMe.md
021_VTK_Test/include/: vtkIncludes.hpp
021_VTK_Test/src/: demo_scale_image.cc  demo_scale_image_offical.cc  demo_scaled_obj.cc
022_Dynamic_Feature_Check/: CMakeLists.txt  ReadMe.md  build.sh  del.sh  run.sh
022_Dynamic_Feature_Check/include/: DataReader.hpp
022_Dynamic_Feature_Check/src/: main.cc  main_v1.cc  main_v2.cc  main_v3.cc
024_Bilateral_Filter/: CMakeLists.txt  ReadMe.md  main.cpp
027_QR_Solver/: CMakeLists.txt  ReadMe.md  mat.txt  qr.cc
028_CppLibtroch/: CMakeLists.txt  ReadMe.md
028_CppLibtroch/.VSCodeCounter/: details.md  results.csv  results.md  results.txt
028_CppLibtroch/src/: example_01.cpp  main.cpp
029_KITTI_Stereo_Test/: CMakeLists.txt  ReadMe.md  run.sh
029_KITTI_Stereo_Test/src/: main.cpp
034_slambook_ch9_vo_enhance/: CMakeLists.txt  ReadMe.md  Results.txt  run.sh
034_slambook_ch9_vo_enhance/cmake_modules/: FindSophus.cmake
034_slambook_ch9_vo_enhance/config/: default.yaml
034_slambook_ch9_vo_enhance/evo/desk2/: CameraPoses.txt
034_slambook_ch9_vo_enhance/evo/desk_with_persion/: CameraPoses.txt
034_slambook_ch9_vo_enhance/src/: visual_odometry.cpp
034_slambook_ch9_vo_enhance/test/: run_vo.cpp
035_jsoncpp_test/: CMakeLists.txt  ReadMe.md  run_base_test.sh  run_yolact_result_prase.sh
035_jsoncpp_test/CocCoMaskAPI/: CMakeLists.txt
035_jsoncpp_test/data/: base_demo.json  yolact_results.json
035_jsoncpp_test/python_scripts/: ReadMe.md  run_with_json.py  run_yolact_original.py
035_jsoncpp_test/src/: CMakeLists.txt  base_test.cpp  yolact_result_parse.cpp
038_USART_in_Linux/: CMakeLists.txt  ReadMe.md
038_USART_in_Linux/src/: main.cpp
040_Pangolin_Model_Viewer/: CMakeLists.txt
040_Pangolin_Model_Viewer/inc/: rendertree.h
040_Pangolin_Model_Viewer/src/: main.cpp
042_pangolin_paint_prepare/: CMakeLists.txt  ReadMe.md  runDemo.sh
042_pangolin_paint_prepare/inc/: demo.hpp
042_pangolin_paint_prepare/src/: demo.cc
045_OpenGL_Object_Picker/: CMakeLists.txt  ReadMe.md
045_OpenGL_Object_Picker/src/: main.cpp  main.cpp.bk1  my_test_01.cpp  my_test_02.cpp  my_test_03.cpp  my_test_04.cpp  my_test_05.cpp
046_PCL_Segemention/: CMakeLists.txt  ReadMe.md
046_PCL_Segemention/src/: main.cc
047_CMake_advanced/: CMakeLists.txt  ReadMe.md  rundemo.sh
047_CMake_advanced/config/: Config.h.in
047_CMake_advanced/inc/: Config.h
047_CMake_advanced/output/: dummy_other.hpp
047_CMake_advanced/src/: main.cc
(+214 files in other folders)
